@@ -237,7 +237,7 @@ if [ ! "$SKIP_INIT" ]; then
   if [ "$MODULE_NAME" != "dkan" ]; then
     echo "Cloning dkan.."
     # switched to https because ssh keys may not exist in all environments (Probo)
-    git clone https://github.com/NuCivic/dkan.git --branch $BRANCH
+    git clone https://github.com/GetDKAN/dkan.git --branch $BRANCH
   fi
 
   if [ -f dkan/.ahoy/starter.ahoy.yml ]; then
