@@ -1,6 +1,6 @@
 # DKAN Data Story
 
-DKAN Data Story adds a new content type for "data stories" to DKAN. Data Stories can have [complex layouts](http://docs.getdkan.com/dkan-documentation/dkan-users-guide/customize-dkan-pages-layouts-and-components-using-panels) using [Panels](http://www.drupal.org/project/panels) and [Panelizer](https://www.drupal.org/project/panelizer) and contain embedded [visualiztions](https://github.com/NuCivic/visualization_entity) and other elements.
+DKAN Data Story adds a new content type for "data stories" to DKAN. Data Stories can have [complex layouts](http://docs.getdkan.com/dkan-documentation/dkan-users-guide/customize-dkan-pages-layouts-and-components-using-panels) using [Panels](http://www.drupal.org/project/panels) and [Panelizer](https://www.drupal.org/project/panelizer) and contain embedded [visualiztions](https://github.com/GetDKAN/visualization_entity) and other elements.
 
 Module includes:
 
