@@ -150,11 +150,11 @@ The generic context that holds some helper steps
 
 **Handling required fields from custom deployments or when enabling ODFE**
 Using the default build of DKAN, there is only one required field for datasets which is the title. If you enable Open Data Federal Extras, or add custom required fields to the dataset form, we need to account for these new fields in the tests that create and edit datasets.
-We use profile and suite level controls to combine our default and custom behat configuration as described here: [Behat Setup](https://github.com/NuCivic/dkan_starter/blob/master/docs/docker-dev-env/behat-setup.rst)
+We use profile and suite level controls to combine our default and custom behat configuration as described here: [Behat Setup](https://github.com/GetDKAN/dkan_starter/blob/master/docs/docker-dev-env/behat-setup.rst)
 
 Although this technique allows for some level of composition it does not actually allow for custom parameter configurations to be passed into the default context configuration. This state is problematic because we cannot easily adjust the behavior of a dkan test against custom context configurations.
 
-So we need a way to pass custom parameters into the default context. Currently we are adding required fields directly to [DatasetContext.php](https://github.com/NuCivic/dkan/pull/1963/files#diff-c2f41d7be2fa9d3ff5ed50a75faabb1eR19)
+So we need a way to pass custom parameters into the default context. Currently we are adding required fields directly to [DatasetContext.php](https://github.com/GetDKAN/dkan/pull/1963/files#diff-c2f41d7be2fa9d3ff5ed50a75faabb1eR19)
 
 In the near future, we want to introduce a build step that can merge our custom parameters into the the default behat.yml file in a similar fashion to the way we now merge the upstream config/config.yml to the site specific config/cofig.yml file. So running `ahoy build config` should would apply any custom parameters set in the `config/cofig.yml` into the `dkan/test/behat.yml` context configuration. See [dkan_starter issue](NuCivic/dkan_starter#332).
 
